<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoveCards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">请输入手机号/邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="forgot_password">忘记了？</string>
    <string name="register">注册</string>
    <string name="login">登录</string>

</resources>
