<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4d4d4d"
    android:padding="32dp">


    <RelativeLayout
        android:id="@+id/rl_top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:minWidth="40dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/forgot_password"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:minWidth="40dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_login_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top_panel"
        android:background="@drawable/shape_login_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_username"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:textSize="14sp"
            android:paddingRight="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="#efefef" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/hint_password"
            android:minHeight="48dp"
            android:textSize="14sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_login_panel"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_login_bg"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="16sp" />
</RelativeLayout>
